# mnemo

./: .weixin-token.json  Cargo.toml  README.md  README_EN.md
.claude/: settings.local.json
mnemo-core/: Cargo.toml
mnemo-core/src/: agent.rs  error.rs  lib.rs  message.rs  types.rs
mnemo-gateway/: Cargo.toml
mnemo-gateway/src/: error.rs  gateway.rs  lib.rs  types.rs
mnemo-gateway/src/qq/: gateway.rs  mod.rs  types.rs
mnemo-gateway/src/wechat/: client.rs  gateway.rs  mod.rs  types.rs
mnemo-memory/: Cargo.toml
mnemo-memory/src/: error.rs  lib.rs  memory.rs  types.rs
src/: cli.rs  config.rs  db.rs  llm.rs  main.rs  run.rs  setup.rs
