[package]
name = "mnemo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
mnemo-memory = { path = "../mnemo-memory" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
