[package]
name = "mnemo-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
mnemo-core = { path = "../mnemo-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
base64 = "0.22"
chrono = "0.4"
botrs = "0.2"
